# blackhole

blackhole/: CMakeLists.txt  app
blackhole/.cache/clangd/index/: glad.c.456338EBA66A4256.idx  glad.h.D2D6021C0B4E557C.idx  khrplatform.h.2EA2743572A268D4.idx  main.cpp.E28999FDBB79DB86.idx
blackhole/glad/src/: glad.c
blackhole/include/glad/: glad.h
blackhole/src/: main.cpp  objects.hpp
